--- a/views/fontend/login.html
+++ b/views/fontend/login.html
@@ -1,5 +1,7 @@
+
 <!doctype html>
 <html lang="en">
+	{{ define "content"}}
   <head>
   	<title>Login 09</title>
     <meta charset="utf-8">
@@ -26,7 +28,7 @@
 		      	<div class="img d-flex align-items-center justify-content-center" style="background-image: url(/public/img/ic-logo.png); width:200px;"></div>
 		      	<h3 class="text-center mb-0">Welcome</h3>
 		      	<p class="text-center">Sign in by entering the information below</p>
-						<form action="#" class="login-form">
+						<form method="POST" action="/login" class="login-form">
 		      		<div class="form-group">
 		      			<div class="icon d-flex align-items-center justify-content-center"><span class="fa fa-user"></span></div>
 		      			<input type="text" class="form-control" placeholder="Username" required>
@@ -58,6 +60,6 @@
   <script src="/public/js/popper.js"></script>
   <script src="/public/js/bootstrap.min.js"></script>
   <script src="/public/js/main.js"></script>
-
+  {{end}}
 	</body>
 </html>
